--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/jpg"
-      href="https://static.vecteezy.com/system/resources/previews/026/306/398/non_2x/artificial-intelligence-icon-ai-brain-computer-chip-circuit-processor-cpu-technology-sign-symbol-black-artwork-graphic-illustration-clipart-eps-vector.jpg"
-    />
+    <link rel="icon" type="image/jpg" href="src/assets/PitchPilot Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PitchPilot</title>
   </head>
